CHANGES.txt - 08/12/2002
------------------------

CHANGES IN CUPS V1.1.16

	- The CUPS API convenience functions would attempt to
	  connect to the remote server name in a
	  "printer@server" printer name instead of dealing with
	  the default (usually local) server.  Aside from
	  causing user confusion, the remote server name might
	  not be resolved properly, causing further problems.
	- "lp -q" would cause the "lp" command to segfault, as
	  the program would try to print the option letter that
	  caused the error using the wrong index into the
	  command-line; bugfix from Debian.
	- Fixed a minor inconsistancy in the encoding of boolean
	  attributes from printer options in
	  cupsEncodeOptions().
	- Added a FilterNice directive which sets the priority
	  of job filter processes that are run by the scheduler.
	- Added Solaris x86 USB printer support.
	- The USB backend now reports both the ulpt and unlpt
	  devices under *BSD.
	- The "lpstat -o" command would truncate the
	  "printer-jobid" string if it was longer than 21
	  characters.
	- The PJL-based MIME type rules now look in the first
	  1024 bytes instead of just the first 512 bytes to find
	  the language mode.
	- The image file types are now listed explicitly in the
	  mime.convs file so that additional image file formats
	  do not use the standard CUPS image filters by default.
	- Updated the Software Programmers Manual to include
	  all of the CUPS API functions.
	- ppdOpen*() no longer sorts choices for an option.
	- The web interface now enforces constraints in PPD
	  files when configuring a printer.
	- When stopping a printer, the scheduler didn't set the
	  printer state before stopping the current job.
	- The cupsaddsmb utility now lists all data files for
	  Win9x and WinMe clients when installing that Windows
	  driver.
	- Jobs submitted to a class now bounce immediately to
	  the next available printer rather than waiting until
	  that printer is available.